k8s/k8s-02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jredmine
  namespace: jredmine
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    #nginx.ingress.kubernetes.io/session-cookie-name: "MY_SESSION"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/session-cookie-path: /
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  # tls:
  # - hosts:
  #   - jredmine-server.forsrc.org
  #   - jredmine.forsrc.org
  #   secretName: jredmine.forsrc.com
  rules:
  - host: jredmine-server.forsrc.org
    http:
      paths:
      - path: /
        pathType: Prefix #"Exact", "Prefix", or "ImplementationSpecific"
        backend:
          service:
            name: jredmine-server
            port:
              number: 80
  - host: jredmine.forsrc.org
    http:
      paths:
      - path: /
        pathType: Prefix #"Exact", "Prefix", or "ImplementationSpecific"
        backend:
          service:
            name: jredmine-ui
            port:
              number: 80
